--- a/css/custom.css
+++ b/css/custom.css
@@ -378,7 +378,7 @@ section.features {
 	box-shadow:0 3px 5px rgba(0,0,0,.05);
 	margin: 50px 5px;
   min-height: 314px;
-  width: 24% !important;
+  width: 24%;
 }
 
 .feature img.feature-pic {
